--- a/src/Compatibility/ControlGallery/src/Directory.Build.props
+++ b/src/Compatibility/ControlGallery/src/Directory.Build.props
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <SampleProject>true</SampleProject>
     <UseMaui Condition=" '$(UseWorkload)' == 'true' ">true</UseMaui>
+    <WarningsNotAsErrors>$(WarningsNotAsErrors);XC0010;XC0046;XC0047;</WarningsNotAsErrors>
   </PropertyGroup>
   <Import Project="../../../../Directory.Build.props" />
 </Project>
